--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "lodash": "^4.17.15",
     "random-words": "^1.1.0",
     "socket.io": "^2.2.0"
   }
