--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "lodash": "^4.17.15",
     "random-words": "^1.1.0",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
