start adding unit testing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
         "node": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:jest/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -14,16 +15,16 @@
     "parserOptions": {
         "ecmaVersion": 2018
     },
+    "plugins": ["jest"],
     "rules": {
-        "semi": [
-            2,
-            "never"
-        ],
-        "max-len": [
-            "error",
-            {
-                "code": 125
-            }
-        ]
+        "semi": [ 2, "never" ],
+        "max-len": [ "error", { "code": 125 } ],
+        "jest/no-identical-title": "error",
+        "jest/consistent-test-it": "warn",
+        "jest/expect-expect": "warn",
+        "jest/no-commented-out-tests": "error",
+        "jest/no-disabled-tests": "error",
+        "jest/no-empty-title": "error",
+        "jest/no-focused-tests": "error"
     }
 }
