--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Spyfall remake",
   "main": "App.js",
   "scripts": {
-    "test": "test",
+    "test": "jest --watch",
+    "test-cov": "jest --coverage",
     "start": "node App.js"
   },
   "repository": {
@@ -29,6 +30,8 @@
   "devDependencies": {
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.15.1",
+    "jest": "^24.9.0"
   }
 }
