--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --watch",
     "test-cov": "jest --coverage",
+    "acceptance": "jest ./acceptance",
     "start": "node App.js"
   },
   "repository": {
@@ -25,7 +26,9 @@
     "express": "^4.16.4",
     "lodash": "^4.17.15",
     "random-words": "^1.1.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "socketio-wildcard": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
